# panager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.model  Makefile  codemap.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  dev.yml  model.yml  prod-cd.yml  prod-ci.yml  rollback.yml
.slim/: cartography.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  38885c1da4bf_add_schedule_type_and_payload.py  4e84b95a4b3a_create_tool_registry_table.py  5edb886461e3_add_github_and_notion_tokens.py
docs/: 2026-02-21-free-model-benchmark.md
docs/plans/: 2026-02-20-panager-implementation.md  2026-02-21-auth-flow-implementation.md  2026-02-21-feat-recurring-event-task-delete-hitl.md  2026-02-21-google-calendar-integration.md  2026-02-21-hitl-refactor.md  2026-02-21-perf-channel-send-parallel-embedding-async.md  2026-02-21-type-safety-and-bug-fixes.md  2026-02-23-ci-cd-and-zero-trust-design.md  2026-02-23-codemap-generation.md  2026-02-24-tailscale-cd-migration.md  2026-02-27-discord-api-tests.md  2026-02-27-google-worker-tests.md
src/panager/: codemap.md  config.py  logging.py  main.py
tests/: test_config.py  test_db_connection.py  test_logging.py  test_main_logic.py
tests/agent/: test_agent_routing.py  test_coverage_final.py  test_github_tools.py  test_google_tools_expansion.py  test_google_worker.py  test_graph.py  test_hitl.py  test_new_architecture.py  test_notion_tools.py  test_registry_expansion.py  test_supervisor_routing.py  test_tools.py  test_worker_graphs.py  test_workflow.py  test_workflow_handlers_expansion.py  test_workflow_nodes.py
tests/api/: test_github_webhook.py
tests/bot/: test_bot_locking.py  test_bot_logic.py  test_handlers.py
tests/google/: test_auth.py  test_calendar_tool.py  (+1 more)
(+136 files in other folders)
