[project]
name = "panager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "discord.py>=2.4.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.0",
    "sentence-transformers>=3.3.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.154.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "watchfiles>=1.0.0",
]

[tool.uv.scripts]
bot = "python -m panager.bot.client"
api = "uvicorn panager.api.main:app --reload"
migrate = "alembic upgrade head"
test = "pytest"

[tool.pytest.ini_options]
asyncio_mode = "auto"
